--- a/pokedex/public/css/pokemon_main.css
+++ b/pokedex/public/css/pokemon_main.css
@@ -1,8 +1,34 @@
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-around;
+}
+
+.card {
+    margin: 10px 0px 10px 10px;
+}
+
 .card-body {
     margin: auto;
+    display: flex;
+    align-items: center;
 }
 
 .img {
     width: 120px;
+    margin: auto;
+    padding-top: 5px;
+}
+
+.add-button {
+    margin-left: 5px;
+}
+
+a, a:hover {
+    text-decoration: none;
+}
+
+.pagination {
     margin: auto;
 }
