--- a/pokedex/public/css/pokemon_single.css
+++ b/pokedex/public/css/pokemon_single.css
@@ -1,10 +1,11 @@
-.dropdown {
-    margin: 10px 0px 5px 115px;
+.img {
+    width: 250px;
+    margin: auto;
+    padding-top: 5px;
 }
 
 .container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-content: space-around;
 }
@@ -13,16 +14,10 @@
     margin: 10px 0px 10px 10px;
 }
 
-.card-body {
-    margin: auto;
+.card-bottom {
     display: flex;
     align-items: center;
-}
-
-.img {
-    width: 120px;
-    margin: auto;
-    padding-top: 5px;
+    justify-content: center;
 }
 
 .add-button {
@@ -32,8 +27,3 @@
 a, a:hover {
     text-decoration: none;
 }
-
-.pagination {
-    margin: auto;
-}
-
