--- a/pokedex/public/css/pokemon_single.css
+++ b/pokedex/public/css/pokemon_single.css
@@ -1,27 +1,37 @@
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.badge-container {
+    display: flex;
+    justify-content: center;
+}
+
 .img {
     width: 250px;
     margin: auto;
     padding-top: 5px;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    align-content: space-around;
-}
-
 .card {
     margin: 10px 0px 10px 10px;
 }
 
-.card-bottom {
+.card-bottom, h1 {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.add-button {
-    margin-left: 5px;
+.badge-type {
+    margin: 5px;
+}
+
+.stat-title {
+    font-weight: bold;
 }
 
 a, a:hover {
