--- a/pokedex/templates/security/login.html.twig
+++ b/pokedex/templates/security/login.html.twig
@@ -21,7 +21,7 @@
     <div class="container">
         <h1 class="h3 mb-3 font-weight-normal">Connectez-vous</h1>
         <div class="container-email">
-            <div class="email-logo fa fa-user  fa-lg"></div>
+            <div class="email-logo fa fa-at  fa-lg"></div>
             <input placeholder="Votre email" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
         </div>
         <div class="container-password">
