--- a/pokedex/templates/registration/register.html.twig
+++ b/pokedex/templates/registration/register.html.twig
@@ -1,22 +1,36 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+<link rel="stylesheet" href="{{ asset('css/register.css') }}">
+{% endblock %}
+
 {% block title %}S'inscrire - myPokedex{% endblock %}
 
 {% block body %}
+{% include "partials/nav.html.twig" %}
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
-
-    <h1>Register</h1>
-
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+    <div class="container">
+        <h1 class="h3 mb-3 font-weight-normal">Inscrivez-vous</h1>
+        {{ form_start(registrationForm) }}
+            <div class="container-email">
+                <div class="email-logo fa fa-at fa-lg"></div>
+                {{ form_row(registrationForm.email, { 'label': false }) }}
+            </div>
+            <div class="container-username">
+                <div class="email-logo fa fa-user fa-lg"></div>
+                {{ form_row(registrationForm.username, { 'label': false }) }}
+            </div>
+            <div class="container-password">
+                <div class="password-logo fa fa-lock fa-lg"></div>
+                {{ form_row(registrationForm.plainPassword, { 'label': false }) }}
+            </div>
+            <div class="checkbox">
+                {{ form_row(registrationForm.agreeTerms, { 'label': 'Conditions d\'utilisations' }) }}
+            </div>
+            {{ form_row(registrationForm.register) }}
+        {{ form_end(registrationForm) }}
+    </div>        
+    
 {% endblock %}
