--- a/pokedex/public/css/pokemon_main.css
+++ b/pokedex/public/css/pokemon_main.css
@@ -2,6 +2,16 @@
     margin: 10px 0px 5px 115px;
 }
 
+.top-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.top-container span {
+    text-transform: capitalize;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
