update profile page

--- a/pokedex/public/css/pokemon_main.css
+++ b/pokedex/public/css/pokemon_main.css
@@ -47,3 +47,12 @@ a, a:hover {
     margin: auto;
 }
 
+.container-header {
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-modify, .btn-add {
+    width: 215px;
+    margin: 5px;
+}
