--- a/pokedex/public/css/login.css
+++ b/pokedex/public/css/login.css
@@ -7,7 +7,8 @@
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 h1 {
