add - button if pokemon is own by user

--- a/pokedex/templates/pokemon/index.html.twig
+++ b/pokedex/templates/pokemon/index.html.twig
@@ -25,7 +25,11 @@
         <img class="img" src="{{asset('img/' ~ pokemon.number ~ '.png')}}" class="card-img-top" alt="Photo de {{pokemon.name}}">
         <div class="card-body">
             <a href="#" class="btn btn-primary">{{pokemon.name}}</a>
+            {% if app.user.pokemons.contains(pokemon) == pokemon %}
+            <a href="" class="fa fa-minus-square-o fa-2x add-button"></a>
+            {% else %}
             <a href="" class="fa fa-plus-square-o fa-2x add-button"></a>
+            {% endif %}
         </div>
     </div>
     {% endfor %}
