--- a/pokedex/templates/pokemon/index.html.twig
+++ b/pokedex/templates/pokemon/index.html.twig
@@ -24,7 +24,7 @@
     <div class="card" style="width: 12rem;">
         <img class="img" src="{{asset('img/' ~ pokemon.number ~ '.png')}}" class="card-img-top" alt="Photo de {{pokemon.name}}">
         <div class="card-body">
-            <a href="#" class="btn btn-primary">{{pokemon.name}}</a>
+            <a href="{{path('pokemon_single', {'id': pokemon.id})}}" class="btn btn-primary">{{pokemon.name}}</a>
             {% if pokemon in app.user.pokemons %}
             <a href="{{path('pokemon_remove', { 'id': pokemon.id }) }}" class="fa fa-minus-square-o fa-2x add-button"></a>
             {% else %}
