--- a/pokedex/public/css/pokemon_single.css
+++ b/pokedex/public/css/pokemon_single.css
@@ -1,8 +1,18 @@
 
+.container-name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.fa-chevron-left, .fa-chevron-right {
+    margin: 0px 10px 0px 10px
 }
 
 .badge-container {
