--- a/pokedex/templates/partials/nav.html.twig
+++ b/pokedex/templates/partials/nav.html.twig
@@ -1,18 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="{{path('pokemon_main')}}">myPokedex</a>
-    <ul class="navbar-nav mr-auto">
-    <li class="nav-item {% if app.request.attributes.get('_route') == 'pokemon_main' %}active{% endif %}">
-        <a class="nav-link" href="{{path('pokemon_main')}}">Pokemon</a>
-    </li>
-    <li class="nav-item {% if app.request.attributes.get('_route') == 'type_main' %}active{% endif %}">
-        <a class="nav-link" href="{{path('type_main')}}">Type</a>
-    </li>
-    <li class="nav-item {% if app.request.attributes.get('_route') == 'account_main' %}active{% endif %}">
-        <a class="nav-link" href="{{path('profile_main', {'id': app.user.id})}}">Mon compte</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{{path('app_logout')}}">Se déconnecter</a>
-    </li>
-    <li class="nav-item">
-    </li>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item {% if app.request.attributes.get('_route') == 'pokemon_main' %}active{% endif %}">
+                <a class="nav-link" href="{{path('pokemon_main')}}">Pokemon</a>
+            </li>
+            <li class="nav-item {% if app.request.attributes.get('_route') == 'type_main' %}active{% endif %}">
+                <a class="nav-link" href="{{path('type_main')}}">Type</a>
+            </li>
+            <li class="nav-item {% if app.request.attributes.get('_route') == 'account_main' %}active{% endif %}">
+                <a class="nav-link" href="{{path('profile_main', {'id': app.user.id})}}">Mon compte</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{path('app_logout')}}">Se déconnecter</a>
+            </li>
+        </ul>    
+    </div>
 </nav>
