add form constraints + link to admin

--- a/pokedex/templates/partials/nav.html.twig
+++ b/pokedex/templates/partials/nav.html.twig
@@ -20,6 +20,6 @@
             </li> 
             {% endif %}
         </ul>
-        <a class="nav-link btn btn-outline-secondary" href="{{path('app_logout')}}">ADMIN</a>
+        <a class="nav-link btn btn-outline-secondary" href="{{path('admin_pokemon')}}">ADMIN</a>
     </div>
 </nav>
